# hf_speecht5

./: .gitignore  README.md  config.json  config.yaml  main.py  pyproject.toml
app/: dataset.py  module.py
